test/spec_vectors/return_call/fail/module_4.wat
(module (func $arity-0-vs-2 (return_call 1)) (func (param f64 i32)))